# welfare

./: CMakeLists.txt  README  configure
test/: bmi_test.cxx
tools/welfare_compute_bmi/: welfare_compute_bmi.cxx
welfare/: bmi.cxx  bmi.hpp
